--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -20,10 +20,11 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - run: echo "some text" > hello.txt
-    uses: actions/upload-artifact@v3
-    with:
-      name: my-artifact
-      path: hello.txt
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: hello.txt
 
   integration:
     runs-on: ubuntu-20.04
