--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,18 @@ jobs:
             echo "This is an integration step"
             exit 1
           when: on_fail
+  
+  artifact:
+    docker:
+      - image: python:3.6
+    steps:
+      - checkout
+      - run:
+          command: /
+            echo "This is an artifact step"
+            echo "hello" > hello.txt
+      - store_artifacts:
+          path: hello.txt
 
   prod:
     docker:
