--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,15 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
+  release:
+    machine: true                                        # What is this for?
+    steps:
+      - checkout
+
+      - run: |
+          docker build -t $DOCKER_USERNAME/django.nv .   # Build the application into Docker image
+          docker push $DOCKER_USERNAME/django.nv         # Push the image into registry
+
   integration:
     docker:
       - image: python:3.6
@@ -26,7 +35,7 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
-          when: on_fail                    # Even if the job fails, continue to the next stages
+          when: always                    # Even if the job fails, continue to the next stages
 
   prod:
     docker:
