--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,6 +47,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: docker run --rm -v $(pwd):/src hysnsec/safety check -r requirements.txt --json | tee oast-results.json
+        continue-on-error: true # allow the build to fail, similar to  "allow_failure: true" in GitLab
 
       - uses: actions/upload-artifact@v2
         with:
