--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
       - image: python:3.6                   # similar to "image" in GitLab
     steps:
       - checkout
-      - run: |                              # similar to "script" in GitLab
+      - run: |                              # similar to "script" in GitLab test
           pip install -r requirements.txt
           python manage.py check
 
@@ -17,16 +17,6 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
-  release:
-    machine: true                                        # What is this for?
-    steps:
-      - checkout
-
-      - run: |
-          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-          docker build -t $DOCKER_USERNAME/django.nv .   # Build the application into Docker image
-          docker push $DOCKER_USERNAME/django.nv         # Push the image into registry
-
   integration:
     docker:
       - image: python:3.6
@@ -35,8 +25,7 @@ jobs:
       - run:
           command: |
             echo "This is an integration step"
-            
-          when: always                    # Even if the job fails, continue to the next stages
+            exit 1
 
   prod:
     docker:
@@ -53,12 +42,9 @@ workflows:
       - test:
           requires:
             - build 
-      - release:
-          requires:
-            - test
       - integration:
           requires:
-            - release
+            - test
       - prod:
           type: approval
           requires:
