--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
       - image: python:3.6                   # similar to "image" in GitLab
     steps:
       - checkout
-      - run: |                              # similar to "script" in GitLab test
+      - run: |                              # similar to "script" in GitLab
           pip install -r requirements.txt
           python manage.py check
 
@@ -22,11 +22,13 @@ jobs:
     steps:
       - checkout
 
-      - run: docker run -v $(pwd):/src --rm hysnsec/safety check -r /src/requirements.txt --json | tee oast-results.json
+      - run:
+          command: docker run -v $(pwd):/src --rm hysnsec/safety check -r /src/requirements.txt --json | tee oast-results.json || true
 
       - store_artifacts:
           path: oast-results.json
           destination: safety-artifact
+          when: always
 
   integration:
     docker:
@@ -37,13 +39,14 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
+          when: on_fail                    # Even if the job fails, continue to the next stages
 
   prod:
     docker:
       - image: python:3.6
     steps:
       - checkout
-      - run: echo "This is a deploy step."
+      - run: echo "This is a deploy step"
 
 workflows:
   version: 2
@@ -52,7 +55,7 @@ workflows:
       - build
       - test:
           requires:
-            - build 
+            - build
       - oast:
           requires:
             - test
