--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,19 +17,6 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
-  oast:
-    machine: true
-    steps:
-      - checkout
-
-      - run:
-          command: docker run -v $(pwd):/src --rm hysnsec/safety check -r /src/requirements.txt --json | tee oast-results.json || true
-
-      - store_artifacts:
-          path: oast-results.json
-          destination: safety-artifact
-          when: always
-
   integration:
     docker:
       - image: python:3.6
@@ -39,14 +26,13 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
-          when: on_fail                    # Even if the job fails, continue to the next stages
 
   prod:
     docker:
       - image: python:3.6
     steps:
       - checkout
-      - run: echo "This is a deploy step"
+      - run: echo "This is a deploy step."
 
 workflows:
   version: 2
@@ -55,13 +41,10 @@ workflows:
       - build
       - test:
           requires:
-            - build
-      - oast:
-          requires:
-            - test
+            - build 
       - integration:
           requires:
-            - oast
+            - test
       - prod:
           type: approval
           requires:
