--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,18 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
+  oast-frontend:
+    machine: true
+    steps:
+      - checkout
+
+      - run: docker run --rm -v $(pwd):/src -w /src hysnsec/retire --outputformat json --outputpath retirejs-output.json --severity high
+        when: on_fail
+
+      - store_artifacts:
+          path: retirejs-output.json
+          destination: retirejs-artifact
+
   integration:
     docker:
       - image: python:3.6
@@ -42,10 +54,13 @@ workflows:
       - build
       - test:
           requires:
-            - build 
+            - build
+      - oast-frontend:
+          requires:
+            - test 
       - integration:
           requires:
-            - test
+            - oast-frontend
       - prod:
           type: approval
           requires:
