--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,12 +22,13 @@ jobs:
     steps:
       - checkout
 
-      - run: docker run --rm -v $(pwd):/src -w /src hysnsec/retire --outputformat json --outputpath retirejs-output.json --severity high || true
-        
+      - run:
+          command: docker run --rm -v $(pwd):/src -w /src hysnsec/retire --outputformat json --outputpath retirejs-output.json --severity high || true
 
       - store_artifacts:
           path: retirejs-output.json
           destination: retirejs-artifact
+          when: always
 
   integration:
     docker:
@@ -38,7 +39,7 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
-          when: on_fail
+          when: on_fail         # Even if the job fails, continue to the next stages
 
   prod:
     docker:
@@ -57,7 +58,7 @@ workflows:
             - build
       - oast-frontend:
           requires:
-            - test 
+            - test
       - integration:
           requires:
             - oast-frontend
