--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,8 @@ jobs:
             echo "This is an integration step"
             exit 1
           when: always 
+  allow_failures:
+    - integration
 
   oast-snyk:
     docker: 
