--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,8 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
-    continue-on-error: true 
-  
+          when: on_fail 
+   
   oast-snyk:
     docker: 
       - image: node:latest
