--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,17 +33,19 @@ jobs:
       - image: node:latest
     steps:
       - checkout
+      
       - run:
           command: |
             wget -O snyk https://github.com/snyk/snyk/releases/download/v1.566.0/snyk-linux
             chmod +x snyk
             mv snyk /usr/local/bin/
             npm install
-            snyk test --json > snyk-results.json 
-          when: on_fail 
+            snyk test --json > snyk-results.json || true
+          
       - store_artifacts:
           path: snyk-results.json
           destination: snyk-file
+          when: on_fail 
 
   prod:
     docker:
