--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,24 +28,19 @@ jobs:
             exit 1
           when: on_fail 
    
-  oast-snyk:
+  secret_scanning:
     docker: 
-      - image: node:latest
+      - image: ubuntu-20.04
     steps:
       - checkout
       
       - run:
           command: |
-            wget -O snyk https://github.com/snyk/snyk/releases/download/v1.566.0/snyk-linux
-            chmod +x snyk
-            mv snyk /usr/local/bin/
-            npm install
-            snyk auth $SNYK_ENV
-            snyk test --json > snyk-results.json || true
+            docker run --rm -v $(pwd):/src hysnsec/trufflehog file:///src --json > trufflehog-output.json || true
           
       - store_artifacts:
-          path: snyk-results.json
-          destination: snyk-file
+          path: trufflehog-output.json
+          destination: TruffleHog
           when: on_fail 
 
   prod:
@@ -66,7 +61,7 @@ workflows:
       - integration:
           requires:
             - test
-      - oast-snyk:
+      - secret_scanning:
           requires:
             - integration
       - prod:
