--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,7 @@ jobs:
           when: on_fail 
    
   secret_scanning:
-    docker: 
-      - image: ubuntu-20.04
+    machine: true
     steps:
       - checkout
       
