--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - store_artifacts:
           path: trufflehog-output.json
           destination: TruffleHog
-          when: on_fail 
+          when: always 
 
   prod:
     docker:
