--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-20.04                    # similar to "image" in GitLab #
     steps:
-      - uses: actions/checkout@v2            #
+      - uses: actions/checkout@v2            ####
 
       - name: Setup python
         uses: actions/setup-python@v2
