--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-20.04                    # similar to "image" in GitLab #
     steps:
-      - uses: actions/checkout@v2            ####
+      - uses: actions/checkout@v2            
 
       - name: Setup python
         uses: actions/setup-python@v2
@@ -48,7 +48,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: docker pull owasp/zap2docker-stable:2.10.0
-      - run: docker run --user \$(id -u):\$(id -g) -w /zap -v \$(pwd):/zap/wrk:rw --rm owasp/zap2docker-stable:2.10.0 zap-baseline.py -t https://prod-khbdop1h.lab.practical-devsecops.training -J zap-output.json
+      - run: docker run --user $(id -u):$(id -g) -w /zap -v $(pwd):/zap/wrk:rw --rm owasp/zap2docker-stable:2.10.0 zap-baseline.py -t https://prod-khbdop1h.lab.practical-devsecops.training -J zap-output.json
         continue-on-error: true
 
       - uses: actions/upload-artifact@v2
