Update github actions file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,20 +41,19 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
-  integration:
+  zap_baseline:
     runs-on: ubuntu-20.04
     needs: test
     steps:
       - run: |
-          docker pull owasp/zap2docker-stable:2.10.0
-          docker run --user $(id -u):$(id -g) -w /zap -v $(pwd):/zap/wrk:rw --rm owasp/zap2docker-stable:2.10.0 zap-baseline.py -t https://prod-khbdop1h.lab.practical-devsecops.training -J zap-output.json 
-        continue-on-error: true
+           docker pull owasp/zap2docker-stable:2.10.0
+           docker run --user root --rm -v $(pwd):/zap/wrk:rw -w /zap owasp/zap2docker-stable:2.10.0 zap-baseline.py -t ${{ secrets.PROD_URL }} -J zap-output.json
 
       - uses: actions/upload-artifact@v2
         with:
-          name: zap-output
-          path: zap-output.json 
-        if: always()    
+          name: ZAP Scan
+          path: zap-output.json
+        if: always()        # what is this for?  
 
         
   prod:
