--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,6 @@ jobs:
         
   prod:
     runs-on: ubuntu-20.04
-    needs: integration
+    needs: zap_baseline
     steps:
       - run: echo "This is a deploy step."
