--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,7 @@ jobs:
       - run: |
            docker pull owasp/zap2docker-stable:2.10.0
            docker run --user root --rm -v $(pwd):/zap/wrk:rw -w /zap owasp/zap2docker-stable:2.10.0 zap-baseline.py -t https://prod-khbdop1h.lab.practical-devsecops.training -J zap-output.json
+        continue-on-error: true
 
       - uses: actions/upload-artifact@v2
         with:
