--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,16 +45,18 @@ jobs:
     runs-on: ubuntu-20.04
     needs: test
     steps:
-      - run: |
-           docker pull owasp/zap2docker-stable:2.10.0
-           docker run --user root --rm -v $(pwd):/zap/wrk:rw -w /zap owasp/zap2docker-stable:2.10.0 zap-baseline.py -t https://prod-khbdop1h.lab.practical-devsecops.training -J zap-output.json
-        continue-on-error: true
-
-      - uses: actions/upload-artifact@v2
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          name: ZAP Scan
-          path: zap-output.json
-        if: always()        # what is this for?  
+          ref: main
+
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.4.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'owasp/zap2docker-stable:2.10.0'
+          target: ${{ secrets.PROD_URL }}
+        continue-on-error: true
 
         
   prod:
