--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.4.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.RE_GITHUB_TOKEN }}
           docker_name: 'owasp/zap2docker-stable:2.10.0'
           target: ${{ secrets.PROD_URL }}
         continue-on-error: true
