--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,8 @@ jobs:
       - run:
           command: |
             echo "This is an integration step"
-            exit 1
+            exit 1 || true
+    
 
   prod:
     docker:
