Update CircleCI config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,10 @@ workflows:
       - integration:
           requires:
             - test
+      - zap-baseline:
+          requires:
+            - integration
       - prod:
           type: approval
           requires:
-            - integration
+            - zap-baseline
