--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
   zap-baseline:
     machine: true
     steps:
+      - checkout
       - run: 
           command: |
             docker pull owasp/zap2docker-stable:2.10.0
