Update CircleCI config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,7 @@ jobs:
     steps:
       - checkout
       
-      - run: 
-          command: |
+      - run: |
             docker pull owasp/zap2docker-stable:2.10.0
             docker run --user $(id -u):$(id -g) -w /zap -v $(pwd):/zap/wrk:rw --rm owasp/zap2docker-stable:2.10.0 zap-baseline.py -t ${PROD_URL} -J zap-output.json || true
           
@@ -42,7 +41,7 @@ jobs:
       - store_artifacts:
           path: zap-output.json
           destination: zap-output
-          when: always
+          
 
   prod:
     docker:
