--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,19 +28,18 @@ jobs:
             exit 1 
           when: on_fail
     
-  zap-baseline:
+  zap_baseline:
     machine: true
     steps:
       - checkout
-      
+
       - run: |
-            docker pull owasp/zap2docker-stable:2.10.0
-            docker run --user $(id -u):$(id -g) -w /zap -v $(pwd):/zap/wrk:rw --rm owasp/zap2docker-stable:2.10.0 zap-baseline.py -t ${PROD_URL} -J zap-output.json || true
-          
+          docker pull owasp/zap2docker-stable:2.10.0
+          docker run --user root --rm -v $(pwd):/zap/wrk:rw -w /zap owasp/zap2docker-stable:2.10.0 zap-baseline.py -t ${PROD_URL} -J zap-output.json || true
 
       - store_artifacts:
           path: zap-output.json
-          destination: zap-output
+          destination: zap-artifact
           
 
   prod:
