--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,18 +45,15 @@ jobs:
     runs-on: ubuntu-20.04
     needs: test
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: main
-
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.4.0
-        with:
-          token: ${{ secrets.RE_GITHUB_TOKEN }}
-          docker_name: 'owasp/zap2docker-stable:2.10.0'
-          target: ${{ secrets.PROD_URL }}
+      - run: |
+          docker pull projectdiscovery/nuclei:v2.9.1
+          docker run --user $(id -u):$(id -g) -w /nuclei -v $(pwd):/nuclei:rw --rm projectdiscovery/nuclei:v2.9.1 -u ${{ secrets.PROD_URL }} -j -o nuclei-output.json 
         continue-on-error: true
+      - uses: actions/upload-artifact@v2
+        with:
+          name: nuclei-output
+          path: nuclei-output.json 
+        if: always()        # what is this for?
 
         
   prod:
