Update GitHub Actions config file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,6 @@ jobs:
         
   prod:
     runs-on: ubuntu-20.04
-    needs: zap_baseline
+    needs: nuclei_dast
     steps:
       - run: echo "This is a deploy step."
