--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,21 +41,37 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
-  nuclei_dast:
+  nuclei-scan:
     runs-on: ubuntu-20.04
     needs: test
     steps:
       - run: |
-          docker pull projectdiscovery/nuclei:v2.9.1
-          docker run --user $(id -u):$(id -g) -w /nuclei -v $(pwd):/nuclei:rw --rm projectdiscovery/nuclei:v2.9.1 -u https://prod-kbesuu8i.lab.practical-devsecops.training -j -o nuclei-output.json 
-        continue-on-error: true
+           docker run --user $(id -u):$(id -g) -w /nuclei -v $(pwd):/nuclei:rw --rm projectdiscovery/nuclei:v2.9.1 -u https://prod-kbesuu8i.lab.practical-devsecops.training -j -o nuclei-output.json
+
       - uses: actions/upload-artifact@v2
         with:
-          name: nuclei-output
-          path: nuclei-output.json 
+          name: nuclei scan
+          path: nuclei-output.json
         if: always()        # what is this for?
 
-        
+  nuclei_dast:
+    runs-on: ubuntu-20.04
+    needs: test
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: main
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.4.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'owasp/zap2docker-stable:2.10.0'
+          target: ${{ secrets.PROD_URL }}
+        continue-on-error: true
+
+
+
   prod:
     runs-on: ubuntu-20.04
     needs: nuclei_dast
