--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,26 +54,9 @@ jobs:
           path: nuclei-output.json
         if: always()        # what is this for?
 
-  nuclei_dast:
-    runs-on: ubuntu-20.04
-    needs: test
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: main
-      - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.4.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'owasp/zap2docker-stable:2.10.0'
-          target: ${{ secrets.PROD_URL }}
-        continue-on-error: true
-
-
 
   prod:
     runs-on: ubuntu-20.04
-    needs: nuclei_dast
+    needs: nuclei-scan
     steps:
       - run: echo "This is a deploy step."
