--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
     needs: test
     steps:
       - run: |
-           docker run --user $(id -u):$(id -g) -w /nuclei -v $(pwd):/nuclei:rw --rm projectdiscovery/nuclei:v2.9.1 -u https://prod-kbesuu8i.lab.practical-devsecops.training -j -o nuclei-output.json
+           docker run --user $(id -u):$(id -g) -w /.config/nuclei -v $(pwd):/.config/nuclei:rw --rm projectdiscovery/nuclei:v2.9.1 -u https://prod-kbesuu8i.lab.practical-devsecops.training -j -o nuclei-output.json
 
       - uses: actions/upload-artifact@v2
         with:
