--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,14 +45,22 @@ jobs:
     runs-on: ubuntu-20.04
     needs: test
     steps:
-      - run: |
-           docker run --user $(id -u):$(id -g) -w /.config/nuclei -v $(pwd):/.config/nuclei:rw --rm projectdiscovery/nuclei:v2.9.1 -u https://prod-kbesuu8i.lab.practical-devsecops.training -j -o nuclei-output.json
-
-      - uses: actions/upload-artifact@v2
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          name: nuclei scan
-          path: nuclei-output.json
-        if: always()        # what is this for?
+          ref: main
+
+      - name: Nuclei - Vulnerability Scan
+        uses: projectdiscovery/nuclei-action@main
+        with:
+          target: ${{ secrets.PROD_URL }}
+        continue-on-error: true
+
+      - name: GitHub Workflow artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: nuclei.log
+          path: nuclei.log    
 
 
   prod:
