--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,12 +34,11 @@ jobs:
       - checkout
 
       - run: |
-          docker pull projectdiscovery/nuclei:v2.9.1
-          docker run --user $(id -u):$(id -g) -w /nuclei -v $(pwd):/nuclei:rw --rm projectdiscovery/nuclei:v2.9.1 -u https://prod-khbdop1h.lab.practical-devsecops.training -j -o nuclei-output.json || true
+          docker run --user $(id -u):$(id -g) -w /nuclei -v $(pwd):/nuclei:rw --rm projectdiscovery/nuclei:v2.9.1 -u https://prod-kbesuu8i.lab.practical-devsecops.training -j -o nuclei-output.json || true
 
       - store_artifacts:
           path: nuclei-output.json
-          destination: nuclei-output
+          destination: nuclei-artifact
           
 
   prod:
