--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,15 @@
 name: Django                                  # workflow name
 
 on:
-  push:                                       
+  push:
     branches:                                 # similar to "only" in GitLab
       - main
 
 jobs:
   build:
-    runs-on: ubuntu-20.04                    # similar to "image" in GitLab #
+    runs-on: ubuntu-20.04                    # similar to "image" in GitLab
     steps:
-      - uses: actions/checkout@v2            
+      - uses: actions/checkout@v2
 
       - name: Setup python
         uses: actions/setup-python@v2
@@ -40,31 +40,37 @@ jobs:
           source env/bin/activate
           pip install -r requirements.txt
           python manage.py test taskManager
-
-  nuclei-scan:
+  
+  sast:
     runs-on: ubuntu-20.04
     needs: test
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: main
+      - uses: actions/checkout@v2
 
-      - name: Nuclei - Vulnerability Scan
-        uses: projectdiscovery/nuclei-action@main
+      - run: docker run --rm -v $(pwd):/src hysnsec/bandit -r /src -f json -o /src/bandit-output.json
+
+      - uses: actions/upload-artifact@v2
         with:
-          target: ${{ secrets.PROD_URL }}
+          name: Bandit
+          path: bandit-output.json
+        if: always()                        # what is this for?
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.6'
+
+      - run: python3 upload-results.py --host ${{ secrets.DOJO_HOST }} --api_key ${{ secrets.DOJO_API_TOKEN }} --engagement_id 1 --product_id 1 --lead_id 1 --environment "Production" --result_file bandit-output.json --scanner "Bandit Scan"
+
+  integration:
+    runs-on: ubuntu-20.04
+    needs: test
+    steps:
+      - run: echo "This is an integration step"
+      - run: exit 1
         continue-on-error: true
-
-      - name: GitHub Workflow artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: nuclei.log
-          path: nuclei.log    
-
 
   prod:
     runs-on: ubuntu-20.04
-    needs: nuclei-scan
+    needs: integration
     steps:
       - run: echo "This is a deploy step."
