--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,27 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
 
+  semgrep:
+    docker:
+      - image: returntocorp/semgrep-agent:v1
+    environment:
+      SEMGREP_RULES: >- # more at semgrep.dev/explore
+        p/security-audit
+        p/secrets
+        p/django
+
+    steps:
+      - checkout
+
+      - run:
+          name: "Semgrep scan"
+          command: semgrep-agent --gitlab-json > semgrep-output.json || true
+
+      - store_artifacts:
+          path: semgrep-output.json
+          destination: semgrep-artifact
+          when: always
+
   integration:
     docker:
       - image: python:3.6
@@ -26,6 +47,7 @@ jobs:
           command: |
             echo "This is an integration step"
             exit 1
+          when: on_fail                    # Even if the job fails, continue to the next stages
 
   prod:
     docker:
@@ -41,10 +63,13 @@ workflows:
       - build
       - test:
           requires:
-            - build 
-      - integration:
+            - build
+      - semgrep:
           requires:
             - test
+      - integration:
+          requires:
+            - sast
       - prod:
           type: approval
           requires:
