--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,20 +41,32 @@ jobs:
           pip install -r requirements.txt
           python manage.py test taskManager
   
-  oast-frontend:
-    name: Scan
+  container_scanning:
     runs-on: ubuntu-20.04
-    # Skip any PR created by dependabot to avoid permission issues
-    if: (github.actor != 'dependabot[bot]')
+    needs: test
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - uses: returntocorp/semgrep-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: build local container
+        uses: docker/build-push-action@v2
         with:
-          config: >- # more at semgrep.dev/explore!
-            p/security-audit
-            p/secrets
-            p/django
+          tags: django.nv:${{ github.sha }}
+          push: false
+          load: true
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'django.nv:${{ github.sha }}'
+          format: 'json'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'MEDIUM'
         continue-on-error: true
 
   integration:
